browse artists bubbles fix overlap #312

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -38,7 +38,9 @@ ol > li {
   
 }
 
-
+.griddle-container{
+  padding-top: 20px;
+}
 
 .keyword-search-container {
  width: 100% !important; 
